# Small-Talk-with-Claude

./: .gitignore  README.md  approve_comments.sh  publish.sh
.claude/agents/: worker.md
.claude/workflows/: review-phase1-diff.js
.github/workflows/: ci.yml
Day1/: mcp-vs-rest-design.md
blog/: config.toml
blog-api/: Cargo.toml  deploy.sh
blog-api/deploy/: backup-blog-api.sh  blog-api.service  caddy-snippet.conf
blog-api/migrations/: 0001_init.sql
blog-api/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  ratelimit.rs
blog-api/src/routes/: admin.rs  comments.rs  contact.rs  mod.rs  reactions.rs
blog-api/tests/: admin.rs  comments.rs  contact.rs  ratelimit.rs  reactions.rs
blog-api/tests/common/: mod.rs
blog/content/blog/: mcp-is-not-a-new-paradigm-what-it-actually-standardizes-and-how-to-design-for-it.md
blog/content/blog/clickhouse-mergetree-parts-merges-and-the-meaning-of-primary-key/: index.md
blog/content/blog/embedding-table/: index.md
blog/static/js/: interact.js  lightbox.js
blog/templates/: 404.html  base.html  contact.html  index.html  page.html  section.html
blog/templates/tags/: list.html  single.html
blog/tests/: seo_smoke.sh
docs/: interactivity-deploy-debug.md  server-setup.md  tutorial.md
mdpub/: Cargo.toml
mdpub/src/: cli.rs  config.rs  deploy.rs  frontmatter.rs  images.rs  lib.rs  main.rs  runner.rs  state.rs  zola.rs
mdpub/tests/: cli.rs
plans/: blog-improvement-plan.html  fluttering-jumping-panda.md  immutable-sleeping-patterson.md  start-workflow-on-phase-fizzy-fox.md
(+5 files in other folders)
