[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"
description = "Backend API for the Zola blog: comments, reactions, contact form"

[[bin]]
name = "blog-api"
path = "src/main.rs"

[lib]
name = "blog_api"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
serde_json = "1"
